Deprecate HELIX_DISABLED_REASON and add NON_SERVING_INSTANCE_OPERATION_REASON to be used when setting InstanceOperation to DISABLE or UNKNOWN. This change is backwards compatible with HELIX_DISABLED_REASON.